--- a/quarpanion.html
+++ b/quarpanion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 22 2022 16:09:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 01 2022 00:52:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62846a11f6336b719028bd6e" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body-2">
+<body class="body">
   <div class="w-embed">
     <style>
 .logo-link:hover {
@@ -43,10 +43,38 @@
  }
 </style>
   </div>
+  <div class="mobile-navbar-top">
+    <div class="mobile-navbar-container">
+      <a href="index.html" class="logo-link-mobile">Erin Fuller</a>
+      <div data-w-id="bec99033-6443-76f4-548a-cab7e2f79dbf" class="fullscreen-nav">
+        <div style="width:30px;-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0)" class="hamburger-line first"></div>
+        <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0)" class="hamburger-line middle"></div>
+        <div style="width:30px" class="hamburger-line last"></div>
+      </div>
+    </div>
+    <div style="-webkit-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);width:0VW" class="mobile-menu">
+      <div class="mobile-links-wrapper">
+        <a href="index.html" class="mobile-nav-link">About</a>
+        <a href="index.html" class="mobile-nav-link">Projects</a>
+        <a href="tcp.html" class="mobile-nav-link project">The Common Project</a>
+        <a href="food-bank.html" class="mobile-nav-link project">Pittsburgh Food Bank</a>
+        <a href="quarpanion.html" aria-current="page" class="mobile-nav-link project w--current">Quarpanion</a>
+        <a href="selfie-kiosk.html" class="mobile-nav-link project">Selfie Kiosk</a>
+        <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="mobile-nav-link">Resume</a>
+        <div class="social-link-wrapper-mobile">
+          <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
+            <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill="CurrentColor" fill-rule="evenodd" clip-rule="evenodd" d="M2.63004 0.0460335C1.83628 0.177174 1.17246 0.857327 1.04244 1.67274C0.980646 2.06011 0.980646 19.9338 1.04244 20.3212C1.17577 21.1572 1.83697 21.8184 2.67301 21.9518C3.06038 22.0135 20.9341 22.0135 21.3214 21.9518C22.1575 21.8184 22.8187 21.1572 22.952 20.3212C23.0138 19.9338 23.0138 2.06011 22.952 1.67274C22.8187 0.836702 22.1575 0.175498 21.3214 0.0421664C20.9658 -0.0145524 2.97422 -0.0108141 2.63004 0.0460335ZM6.60353 2.4959C7.14675 2.63817 7.75308 3.11056 8.03706 3.61265C8.19965 3.9002 8.34519 4.43499 8.34416 4.74114C8.34205 5.35585 8.08806 5.9694 7.65769 6.39931C7.17725 6.87922 6.64148 7.09832 5.95733 7.09458C5.29363 7.09097 4.76825 6.86002 4.29491 6.36377C3.87665 5.92528 3.66129 5.37274 3.66129 4.73822C3.66129 3.22521 5.1261 2.10883 6.60353 2.4959ZM17.5617 8.00479C19.2202 8.36874 20.1523 9.44003 20.5263 11.4119C20.6511 12.0701 20.6756 12.8184 20.6762 15.9962L20.6769 19.2122L20.5846 19.3419C20.415 19.5801 20.34 19.5907 18.8264 19.5907C17.6326 19.5907 17.4256 19.5811 17.2964 19.5199C16.9865 19.3727 17.0056 19.5821 16.9806 16.0693C16.9602 13.199 16.9509 12.8795 16.8794 12.5868C16.7031 11.8651 16.3347 11.3632 15.8342 11.1627C15.6247 11.0788 15.5066 11.0628 15.091 11.0622C14.6231 11.0615 14.5814 11.0688 14.3057 11.1993C13.6946 11.4888 13.2829 12.1393 13.1166 13.0781C13.088 13.2395 13.0714 14.3954 13.0714 16.2298C13.0714 19.3999 13.0778 19.3169 12.8207 19.4915C12.7158 19.5627 12.5843 19.5692 11.2592 19.5692C9.86331 19.5692 9.80789 19.5661 9.69084 19.4802C9.62411 19.4313 9.53568 19.3249 9.49438 19.2439C9.42405 19.106 9.41923 18.7585 9.41919 13.8179C9.4191 7.96831 9.40058 8.3451 9.69728 8.16171C9.8304 8.07943 9.90847 8.07509 11.2503 8.07539C12.5526 8.07565 12.6727 8.08188 12.7838 8.15514C13.0144 8.30721 13.0483 8.40062 13.0714 8.94821L13.0929 9.45615L13.3078 9.18622C13.8407 8.51668 14.6673 8.08385 15.6711 7.94872C16.0901 7.89234 17.199 7.92521 17.5617 8.00479ZM7.51542 8.15913C7.59091 8.2052 7.68759 8.29612 7.73026 8.36117C7.80391 8.47362 7.80778 8.74454 7.80778 13.8095C7.80778 18.8787 7.80395 19.1465 7.72975 19.2826C7.68145 19.3711 7.58318 19.4567 7.47193 19.5072C7.30805 19.5816 7.17618 19.5889 5.98161 19.5897C4.51766 19.5907 4.46653 19.5818 4.27394 19.2936L4.17593 19.1468L4.18719 13.7857L4.1984 8.42447L4.32731 8.2883C4.39821 8.21336 4.49489 8.13597 4.54215 8.11629C4.58942 8.09661 5.24684 8.07938 6.00309 8.07797C7.29288 8.07556 7.3866 8.08059 7.51542 8.15913Z"></path>
+              </svg></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="navbar-control">
     <a href="index.html" class="logo-link">Erin Fuller</a>
     <div class="navbar-link-wrapper">
-      <a href="#" class="nav-link first">About</a>
+      <a href="index.html" class="nav-link first">About</a>
       <div data-hover="true" data-delay="0" class="nav-link w-dropdown">
         <div class="nav-dropdown w-dropdown-toggle">
           <div class="w-icon-dropdown-toggle"></div>
@@ -59,7 +87,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="#" class="nav-link third">Resume</a>
+      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -77,7 +105,7 @@
         <div class="project-header-subtitle quarpanion">Design for Social Innovation and Interation Design Studio | March - May 2020</div>
       </div>
       <div class="project-hero-right w-col w-col-8 w-col-stack">
-        <div class="project-hero-image-wrapper quarpanion"><img src="images/image-8.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 100vw, 65vw" width="663" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" alt="Usable on Amazon Echo and Google Home" class="image-2"></div>
+        <div class="project-hero-image-wrapper quarpanion"><img src="images/image-8.png" loading="lazy" sizes="100vw" width="663" srcset="images/image-8-p-500.png 500w, images/image-8-p-800.png 800w, images/image-8-p-1080.png 1080w, images/image-8-p-1600.png 1600w, images/image-8.png 1824w" alt="Usable on Amazon Echo and Google Home" class="image-2"></div>
       </div>
     </div>
   </div>
@@ -112,10 +140,10 @@
       <div class="text-block">Most, 66%, said they were getting the support they needed, but 34% said they were not getting the support they needed. Not to mention those who felt they were not getting proper support would be less likely to respond to non-anonymous polls.</div>
       <div class="columns-3 w-row">
         <div class="stretch-column text-bubbles w-col w-col-6">
-          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-2.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-2-p-500.png 500w, images/Text-Bubbles-2-p-800.png 800w, images/Text-Bubbles-2-p-1080.png 1080w, images/Text-Bubbles-2.png 1250w" alt="Thought bubbles" class="text-bubbles-2">
+          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-2.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-2-p-500.png 500w, images/Text-Bubbles-2-p-800.png 800w, images/Text-Bubbles-2-p-1080.png 1080w, images/Text-Bubbles-2.png 1250w" alt="Thought bubbles" class="text-bubbles-2">
         </div>
         <div class="stretch-column text-bubbles w-col w-col-6">
-          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-3.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-3-p-500.png 500w, images/Text-Bubbles-3-p-800.png 800w, images/Text-Bubbles-3-p-1080.png 1080w, images/Text-Bubbles-3.png 1251w" alt="Thought bubbles" class="text-bubbles-2">
+          <div class="text-block">What kind of support do you feel like you&#x27;re missing?</div><img src="images/Text-Bubbles-3.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 66vw, 525px" srcset="images/Text-Bubbles-3-p-500.png 500w, images/Text-Bubbles-3-p-800.png 800w, images/Text-Bubbles-3-p-1080.png 1080w, images/Text-Bubbles-3.png 1251w" alt="Thought bubbles" class="text-bubbles-2">
         </div>
       </div>
       <div class="text-block">Most responders, 71%, said they gained a new hobby or habit during quarantine.<br><br>However, 65% of people also said they lost a hobby or habit during quarantine.<br><br>Overall ... healthy or not, here&#x27;s how people have been coping:</div><img src="images/Text-Bubbles-4.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 77vw" srcset="images/Text-Bubbles-4-p-500.png 500w, images/Text-Bubbles-4-p-800.png 800w, images/Text-Bubbles-4-p-1080.png 1080w, images/Text-Bubbles-4-p-1600.png 1600w, images/Text-Bubbles-4-p-2000.png 2000w, images/Text-Bubbles-4.png 2494w" alt="Thought bubbles" class="text-bubbles-4">
@@ -130,7 +158,7 @@
       <h1 class="heading-1 quarpanion">How might we reframe how we see productivity during this time and what can we create to best foster motivation and productivity in a healthy way for individuals?</h1>
     </div>
     <div class="full-view-description home">
-      <div><img src="images/Screen-Shot-2022-05-01-at-8.00-1.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 96vw, 68vw" srcset="images/Screen-Shot-2022-05-01-at-8.00-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.00-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.00-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.00-1.png 2512w" alt="Tweet from Jenny Jaffe" class="twitter-block"></div>
+      <div><img src="images/Screen-Shot-2022-05-01-at-8.00-1.png" loading="lazy" sizes="100vw" srcset="images/Screen-Shot-2022-05-01-at-8.00-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.00-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.00-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.00-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.00-1.png 2512w" alt="Tweet from Jenny Jaffe" class="twitter-block"></div>
     </div>
     <div class="project-phase-section">
       <h1 class="heading-1 plain">04. Solution</h1>
@@ -164,9 +192,9 @@
             </a>
           </div>
           <div class="w-tab-content">
-            <div data-w-tab="Tab 1" class="conversation-pane w-tab-pane"><img sizes="(max-width: 479px) 82vw, (max-width: 767px) 83vw, (max-width: 991px) 71vw, 61vw" srcset="images/Morning-Check-in-p-500.png 500w, images/Morning-Check-in-p-800.png 800w, images/Morning-Check-in-p-1080.png 1080w, images/Morning-Check-in.png 1482w" src="images/Morning-Check-in.png" loading="lazy" alt=""></div>
-            <div data-w-tab="Tab 2" class="conversation-pane w-tab-pane"><img sizes="(max-width: 479px) 82vw, (max-width: 767px) 83vw, (max-width: 991px) 71vw, 61vw" srcset="images/daytime-check-In-p-500.png 500w, images/daytime-check-In-p-800.png 800w, images/daytime-check-In-p-1080.png 1080w, images/daytime-check-In.png 1482w" src="images/daytime-check-In.png" loading="lazy" alt=""></div>
-            <div data-w-tab="Tab 3" class="conversation-pane evening w-tab-pane w--tab-active"><img sizes="(max-width: 479px) 82vw, (max-width: 767px) 83vw, (max-width: 991px) 71vw, 61vw" srcset="images/Evening-check-In-p-500.png 500w, images/Evening-check-In-p-800.png 800w, images/Evening-check-In-p-1080.png 1080w, images/Evening-check-In.png 1482w" src="images/Evening-check-In.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 1" class="conversation-pane w-tab-pane"><img sizes="100vw" srcset="images/Morning-Check-in-p-500.png 500w, images/Morning-Check-in-p-800.png 800w, images/Morning-Check-in-p-1080.png 1080w, images/Morning-Check-in.png 1482w" src="images/Morning-Check-in.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 2" class="conversation-pane w-tab-pane"><img sizes="100vw" srcset="images/daytime-check-In-p-500.png 500w, images/daytime-check-In-p-800.png 800w, images/daytime-check-In-p-1080.png 1080w, images/daytime-check-In.png 1482w" src="images/daytime-check-In.png" loading="lazy" alt=""></div>
+            <div data-w-tab="Tab 3" class="conversation-pane evening w-tab-pane w--tab-active"><img sizes="100vw" srcset="images/Evening-check-In-p-500.png 500w, images/Evening-check-In-p-800.png 800w, images/Evening-check-In-p-1080.png 1080w, images/Evening-check-In.png 1482w" src="images/Evening-check-In.png" loading="lazy" alt=""></div>
           </div>
         </div>
       </div>
@@ -189,7 +217,7 @@
       </ul>
     </div>
     <div class="full-view-description home left-align">
-      <h1 class="heading-1 plain white">04. Solution</h1><img src="images/Screen-Shot-2022-05-01-at-8.10-1.png" loading="lazy" sizes="(max-width: 479px) 96vw, (max-width: 767px) 95vw, (max-width: 991px) 96vw, 68vw" srcset="images/Screen-Shot-2022-05-01-at-8.10-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.10-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.10-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.10-1.png 2512w" alt="Tweet from Scarlet4UrMa" class="twitter-block">
+      <h1 class="heading-1 plain white">04. Solution</h1><img src="images/Screen-Shot-2022-05-01-at-8.10-1.png" loading="lazy" sizes="(max-width: 479px) 141.609375px, (max-width: 767px) 95vw, (max-width: 991px) 96vw, 68vw" srcset="images/Screen-Shot-2022-05-01-at-8.10-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-8.10-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-8.10-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-8.10-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-8.10-1.png 2512w" alt="Tweet from Scarlet4UrMa" class="twitter-block">
     </div>
     <div class="project-phase-section">
       <h2 class="heading-3">People want to reduce screen time</h2>
@@ -290,5 +318,21 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62799603e61eb4762e6434db" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script data-info="hacks-body">
+// JS
+ var menuOpen = false;
+// on button click
+document.querySelector('.fullscreen-nav').addEventListener('click', ()=>{	
+  // paste your function - start
+  if (menuOpen) {
+    document.querySelector('.body').style.overflow = "auto";
+    menuOpen = false;
+  } else {
+    document.querySelector('.body').style.overflow = "hidden";
+    menuOpen = true;
+  }
+  // paste your function - end
+});
+</script>
 </body>
 </html>
