--- a/tcp.html
+++ b/tcp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 22 2022 16:09:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jun 01 2022 00:52:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62799603e61eb42bae6434dc" data-wf-site="62799603e61eb4762e6434db">
 <head>
   <meta charset="utf-8">
@@ -43,10 +43,38 @@
  }
 </style>
   </div>
+  <div class="mobile-navbar-top">
+    <div class="mobile-navbar-container">
+      <a href="index.html" class="logo-link-mobile">Erin Fuller</a>
+      <div data-w-id="bd26892c-0ae1-69cd-a634-776679bd5cff" class="fullscreen-nav">
+        <div style="width:30px;-webkit-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0, 0PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0)" class="hamburger-line first"></div>
+        <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0DEG) skew(0, 0)" class="hamburger-line middle"></div>
+        <div style="width:30px" class="hamburger-line last"></div>
+      </div>
+    </div>
+    <div style="-webkit-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100VW, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);width:0VW" class="mobile-menu">
+      <div class="mobile-links-wrapper">
+        <a href="index.html" class="mobile-nav-link">About</a>
+        <a href="index.html" class="mobile-nav-link">Projects</a>
+        <a href="tcp.html" aria-current="page" class="mobile-nav-link project w--current">The Common Project</a>
+        <a href="food-bank.html" class="mobile-nav-link project">Pittsburgh Food Bank</a>
+        <a href="quarpanion.html" class="mobile-nav-link project">Quarpanion</a>
+        <a href="selfie-kiosk.html" class="mobile-nav-link project">Selfie Kiosk</a>
+        <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="mobile-nav-link">Resume</a>
+        <div class="social-link-wrapper-mobile">
+          <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
+            <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill="CurrentColor" fill-rule="evenodd" clip-rule="evenodd" d="M2.63004 0.0460335C1.83628 0.177174 1.17246 0.857327 1.04244 1.67274C0.980646 2.06011 0.980646 19.9338 1.04244 20.3212C1.17577 21.1572 1.83697 21.8184 2.67301 21.9518C3.06038 22.0135 20.9341 22.0135 21.3214 21.9518C22.1575 21.8184 22.8187 21.1572 22.952 20.3212C23.0138 19.9338 23.0138 2.06011 22.952 1.67274C22.8187 0.836702 22.1575 0.175498 21.3214 0.0421664C20.9658 -0.0145524 2.97422 -0.0108141 2.63004 0.0460335ZM6.60353 2.4959C7.14675 2.63817 7.75308 3.11056 8.03706 3.61265C8.19965 3.9002 8.34519 4.43499 8.34416 4.74114C8.34205 5.35585 8.08806 5.9694 7.65769 6.39931C7.17725 6.87922 6.64148 7.09832 5.95733 7.09458C5.29363 7.09097 4.76825 6.86002 4.29491 6.36377C3.87665 5.92528 3.66129 5.37274 3.66129 4.73822C3.66129 3.22521 5.1261 2.10883 6.60353 2.4959ZM17.5617 8.00479C19.2202 8.36874 20.1523 9.44003 20.5263 11.4119C20.6511 12.0701 20.6756 12.8184 20.6762 15.9962L20.6769 19.2122L20.5846 19.3419C20.415 19.5801 20.34 19.5907 18.8264 19.5907C17.6326 19.5907 17.4256 19.5811 17.2964 19.5199C16.9865 19.3727 17.0056 19.5821 16.9806 16.0693C16.9602 13.199 16.9509 12.8795 16.8794 12.5868C16.7031 11.8651 16.3347 11.3632 15.8342 11.1627C15.6247 11.0788 15.5066 11.0628 15.091 11.0622C14.6231 11.0615 14.5814 11.0688 14.3057 11.1993C13.6946 11.4888 13.2829 12.1393 13.1166 13.0781C13.088 13.2395 13.0714 14.3954 13.0714 16.2298C13.0714 19.3999 13.0778 19.3169 12.8207 19.4915C12.7158 19.5627 12.5843 19.5692 11.2592 19.5692C9.86331 19.5692 9.80789 19.5661 9.69084 19.4802C9.62411 19.4313 9.53568 19.3249 9.49438 19.2439C9.42405 19.106 9.41923 18.7585 9.41919 13.8179C9.4191 7.96831 9.40058 8.3451 9.69728 8.16171C9.8304 8.07943 9.90847 8.07509 11.2503 8.07539C12.5526 8.07565 12.6727 8.08188 12.7838 8.15514C13.0144 8.30721 13.0483 8.40062 13.0714 8.94821L13.0929 9.45615L13.3078 9.18622C13.8407 8.51668 14.6673 8.08385 15.6711 7.94872C16.0901 7.89234 17.199 7.92521 17.5617 8.00479ZM7.51542 8.15913C7.59091 8.2052 7.68759 8.29612 7.73026 8.36117C7.80391 8.47362 7.80778 8.74454 7.80778 13.8095C7.80778 18.8787 7.80395 19.1465 7.72975 19.2826C7.68145 19.3711 7.58318 19.4567 7.47193 19.5072C7.30805 19.5816 7.17618 19.5889 5.98161 19.5897C4.51766 19.5907 4.46653 19.5818 4.27394 19.2936L4.17593 19.1468L4.18719 13.7857L4.1984 8.42447L4.32731 8.2883C4.39821 8.21336 4.49489 8.13597 4.54215 8.11629C4.58942 8.09661 5.24684 8.07938 6.00309 8.07797C7.29288 8.07556 7.3866 8.08059 7.51542 8.15913Z"></path>
+              </svg></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="navbar-control">
     <a href="index.html" class="logo-link">Erin Fuller</a>
     <div class="navbar-link-wrapper">
-      <a href="#" class="nav-link first">About</a>
+      <a href="index.html" class="nav-link first">About</a>
       <div data-hover="true" data-delay="0" class="nav-link w-dropdown">
         <div class="nav-dropdown w-dropdown-toggle">
           <div class="w-icon-dropdown-toggle"></div>
@@ -59,7 +87,7 @@
           <a href="selfie-kiosk.html" class="subnav-link w-dropdown-link">Selfie Kiosk</a>
         </nav>
       </div>
-      <a href="#" class="nav-link third">Resume</a>
+      <a href="https://drive.google.com/file/d/1vKTM9mgl0jHYUoYGBtiIeKCZekTwNwNt/view" target="_blank" class="nav-link third">Resume</a>
       <div class="social-link-wrapper">
         <a href="https://www.linkedin.com/in/erincfuller/" target="_blank" class="linkedin-logo w-inline-block">
           <div class="html-embed w-embed"><svg width="23" height="22" viewbox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -95,7 +123,7 @@
     <div class="project-phase-section">
       <h3 class="heading-3 phase-superheader first">Phase 1 | CommonPass | Winter 2020 - Spring 2022</h3>
       <h1 class="heading-1">How might we provide verifiable and untampered proof of COVID test status for travel?</h1>
-      <div class="text-block">CommonPass was born with the vision of people importing their test results and (later) vaccine records and keeping them securely on their phones. Ultimately, the platform assesses whether the individual’s lab test results or vaccination records come from a trusted source and if they satisfy the health screening requirements of the destination they want to travel to. If the passenger satisfies the requirements, the platform creates a “yes” or “no” certificate that they can share without sharing any personal health data.</div><img src="images/TCP-Infographic-1.png" loading="lazy" srcset="images/TCP-Infographic-1-p-500.png 500w, images/TCP-Infographic-1-p-800.png 800w, images/TCP-Infographic-1-p-1080.png 1080w, images/TCP-Infographic-1-p-1600.png 1600w, images/TCP-Infographic-1-p-2000.png 2000w, images/TCP-Infographic-1.png 2002w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, (max-width: 2412px) 83vw, 2002px" alt="CommonPass verified prior to onboarding" class="image-3">
+      <div class="text-block">CommonPass was born with the vision of people importing their test results and (later) vaccine records and keeping them securely on their phones. Ultimately, the platform assesses whether the individual’s lab test results or vaccination records come from a trusted source and if they satisfy the health screening requirements of the destination they want to travel to. If the passenger satisfies the requirements, the platform creates a “yes” or “no” certificate that they can share without sharing any personal health data.</div><img src="images/TCP-Infographic-1.png" loading="lazy" srcset="images/TCP-Infographic-1-p-500.png 500w, images/TCP-Infographic-1-p-800.png 800w, images/TCP-Infographic-1-p-1080.png 1080w, images/TCP-Infographic-1-p-1600.png 1600w, images/TCP-Infographic-1-p-2000.png 2000w, images/TCP-Infographic-1.png 2002w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, (max-width: 2412px) 83vw, 2002px" alt="CommonPass verified prior to onboarding" class="image-3">
       <h2 class="heading-3">Personal role</h2>
       <div class="text-block _24-margin">While the core of the UX had already been designed before I joined The Commons Project, my role(s) within the CommonPass team expanded beyond the product design.</div>
       <ul role="list" class="text-block">
@@ -140,9 +168,9 @@
       </div>
       <h3 class="heading-3 phase-superheader">Phase 2 | SMART Health Card Ecosystem | Spring 2021 - Ongoing</h3>
       <h1 class="heading-1">How might we create an interoperable standard for health records?</h1>
-      <div class="text-block">With the upcoming vaccination schedules for most Americans, there was a need  to unify a standard for vaccination credentials. The SMART Health Card Framework was created to empower individuals to access a trustworthy and verifiable copy of their vaccination records in digital or paper form using open, interoperable standards. Individuals can then use those verifiable credentials for medical purposes and to demonstrate their health status to safely return to work, school, travel, and life.</div><img src="images/Group-2429.png" loading="lazy" width="836" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 68vw" srcset="images/Group-2429-p-500.png 500w, images/Group-2429-p-800.png 800w, images/Group-2429-p-1080.png 1080w, images/Group-2429-p-1600.png 1600w, images/Group-2429-p-2000.png 2000w, images/Group-2429-p-2600.png 2600w, images/Group-2429.png 2780w" alt="Smart health cards" class="image-4">
+      <div class="text-block">With the upcoming vaccination schedules for most Americans, there was a need  to unify a standard for vaccination credentials. The SMART Health Card Framework was created to empower individuals to access a trustworthy and verifiable copy of their vaccination records in digital or paper form using open, interoperable standards. Individuals can then use those verifiable credentials for medical purposes and to demonstrate their health status to safely return to work, school, travel, and life.</div><img src="images/Group-2429.png" loading="lazy" width="836" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 68vw" srcset="images/Group-2429-p-500.png 500w, images/Group-2429-p-800.png 800w, images/Group-2429-p-1080.png 1080w, images/Group-2429-p-1600.png 1600w, images/Group-2429-p-2000.png 2000w, images/Group-2429-p-2600.png 2600w, images/Group-2429.png 2780w" alt="Smart health cards" class="image-4">
       <h2 class="header-2 phase-2">Defining SMART Health Cards</h2>
-      <div class="text-block">Creating something as noble as an open-source standard in an active pandemic could not be achieved alone. The Commons Project was among the Steering Group, composed of the founding members of the coalition that are actively supporting and overseeing the implementation guide development process and ensuring that members of VCI faithfully implement the standard and adhere to the guiding principles of VCI. Other members of the Steering Group currently include representatives from Mayo Clinic, MITRE Corporation, Microsoft, The Commons Project Foundation,  Evernorth, CARIN Alliance, UC San Diego Health, and Apple.</div>
+      <div class="text-block">Creating something as noble as an open-source standard in an active pandemic could not be achieved alone. The Commons Project was among the Steering Group, composed of the founding members of the coalition that are actively supporting and overseeing the implementation guide development process and ensuring that members of VCI faithfully implement the standard and adhere to the guiding principles of VCI. Other members of the Steering Group currently include representatives from Mayo Clinic, MITRE Corporation, Microsoft, The Commons Project Foundation,  Evernorth, CARIN Alliance, UC San Diego Health, and Apple.</div><img src="images/Screen-Shot-2022-05-01-at-6.26-1.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 991px) 76vw, 73vw" srcset="images/Screen-Shot-2022-05-01-at-6.26-1-p-500.png 500w, images/Screen-Shot-2022-05-01-at-6.26-1-p-800.png 800w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1080.png 1080w, images/Screen-Shot-2022-05-01-at-6.26-1-p-1600.png 1600w, images/Screen-Shot-2022-05-01-at-6.26-1-p-2000.png 2000w, images/Screen-Shot-2022-05-01-at-6.26-1.png 2504w" alt="" class="image-18">
       <div class="div-block-15">
         <a href="https://www.figma.com/community/file/969941235839543745" target="_blank" class="w-inline-block">
           <div class="button community-figma">Community Figma File</div>
@@ -281,11 +309,11 @@
           <a href="food-bank.html" class="project-card w-inline-block"><img src="images/Group-2430-1.png" loading="lazy" width="384" alt="community food bank" class="project-image">
             <div class="project-card-description">
               <div class="description-wrapper w-row">
-                <div class="w-col w-col-8 w-col-medium-8">
+                <div class="w-col w-col-8 w-col-stack">
                   <div class="project-card-title">Find Food Guide</div>
                   <div class="project-card-subtitle">Spring 2020</div>
                 </div>
-                <div class="column-2 w-col w-col-4 w-col-medium-4">
+                <div class="column-2 w-col w-col-4 w-col-stack">
                   <div class="html-embed-2 w-embed"><svg width="50" height="50" viewbox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M49.1191 6.332C48.5128 3.82828 46.2491 1.62559 43.7549 1.11247C42.8737 0.931259 6.73766 0.931258 5.85644 1.11247C4.67667 1.35519 3.30209 2.11741 2.37841 3.04109C1.45473 3.96477 0.692509 5.33935 0.449791 6.51912C0.268577 7.40034 0.268576 43.5364 0.449789 44.4176C0.692507 45.5974 1.45473 46.972 2.3784 47.8956C3.30209 48.8193 4.67667 49.5815 5.85644 49.8243C6.73766 50.0055 42.8737 50.0055 43.7549 49.8243C44.9347 49.5815 46.3093 48.8193 47.233 47.8956C48.1566 46.972 48.9189 45.5974 49.1616 44.4176C49.3619 43.4437 49.3215 7.16779 49.1191 6.332Z" fill="url(#paint0_linear_215_1519)"></path>
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M49.1191 6.332C48.5128 3.82828 46.2491 1.62559 43.7549 1.11247C42.8737 0.931259 6.73766 0.931258 5.85644 1.11247C4.67667 1.35519 3.30209 2.11741 2.37841 3.04109C1.45473 3.96477 0.692509 5.33935 0.449787 6.51912C0.268577 7.40034 0.268576 43.5364 0.449785 44.4176C0.692507 45.5974 1.45473 46.972 2.37841 47.8956C3.30209 48.8193 4.67667 49.5815 5.85644 49.8243C6.73766 50.0055 42.8737 50.0055 43.7549 49.8243C44.9347 49.5815 46.3093 48.8193 47.233 47.8956C48.1566 46.972 48.9189 45.5974 49.1616 44.4176C49.3619 43.4437 49.3215 7.16779 49.1191 6.332ZM34.9983 29.9354C34.6461 30.4293 34.1706 30.6729 33.5587 30.6729C32.9468 30.6729 32.4713 30.4293 32.1191 29.9354C31.8444 29.5504 31.8435 29.536 31.8085 25.2377L31.7732 20.9264L24.3563 28.3426C18.6366 34.0617 16.8462 35.7855 16.5322 35.8756C15.3049 36.2275 14.0466 34.9692 14.3985 33.7419C14.4886 33.4278 16.2123 31.6375 21.9315 25.9177L29.3477 18.5008L25.0363 18.4656C20.738 18.4306 20.7237 18.4296 20.3387 18.155C19.8447 17.8027 19.6012 17.3272 19.6012 16.7153C19.6012 16.1035 19.8447 15.6279 20.3387 15.2757L20.7249 15.0002L27.1122 14.9648C30.6253 14.9455 33.671 14.9608 33.8806 14.9992C34.3546 15.0859 34.9585 15.5826 35.1686 16.0589C35.2968 16.3495 35.3226 17.6963 35.3008 22.9844L35.2738 29.5492L34.9983 29.9354Z" fill="#F7F8FC"></path>
@@ -355,5 +383,21 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62799603e61eb4762e6434db" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script data-info="hacks-body">
+// JS
+ var menuOpen = false;
+// on button click
+document.querySelector('.fullscreen-nav').addEventListener('click', ()=>{	
+  // paste your function - start
+  if (menuOpen) {
+    document.querySelector('.body').style.overflow = "auto";
+    menuOpen = false;
+  } else {
+    document.querySelector('.body').style.overflow = "hidden";
+    menuOpen = true;
+  }
+  // paste your function - end
+});
+</script>
 </body>
 </html>
